--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,6 @@ stages:
 variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
-  DOCKER_IMAGE_NAME: "my-quarkus-app"
-  DOCKER_REGISTRY: "your-nexus-registry"
-  CANARY_DEPLOY_HOST: "your-canary-deployment-host"
-  OPENSHIFT_NAMESPACE: "your-openshift-namespace"
-  OPENSHIFT_ROUTE_NAME: "your-openshift-route-name"
 
 build:
   stage: build
@@ -18,5 +13,8 @@ build:
   artifacts:
     paths:
       - target/*.jar
+  tags:
+    - master
+
 
 
