--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,8 @@
   <version>1.1</version>
   <packaging>jar</packaging>
 
-  <name>Hello World</name>
+  <name>Hello World using Quarkus</name>
   <description>The most basic of Java programs.</description>
-  <url>https://www.coveros.com/</url>
-  <inceptionYear>2018</inceptionYear>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
