--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<url>https://www.coveros.com/</url>
 	<inceptionYear>2018</inceptionYear>
 	<properties>
-      <compiler-plugin.version>3.8.1</compiler-plugin.version>
+      <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
       <maven.compiler.parameters>true</maven.compiler.parameters>
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
