--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,17 @@
 	<url>https://www.coveros.com/</url>
 	<inceptionYear>2018</inceptionYear>
 	<properties>
-      <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-      <maven.compiler.parameters>true</maven.compiler.parameters>
-      <maven.compiler.source>11</maven.compiler.source>
-      <maven.compiler.target>11</maven.compiler.target>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <quarkus-plugin.version>2.2.3.Final</quarkus-plugin.version>
-      <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
-      <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
-      <quarkus.platform.version>2.2.3.Final</quarkus.platform.version>
-      <surefire-plugin.version>2.22.1</surefire-plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<jdk.version>1.8</jdk.version>
+		<quarkus.version>3.1.0.Final</quarkus.version>
+		<quarkus-plugin.version>3.1.0.Final</quarkus-plugin.version>
+		<quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
+		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
+		<quarkus.platform.version>3.1.0.Final</quarkus.platform.version>
+		<surefire-plugin.version>3.1.0</surefire-plugin.version>
+		<docker.image.prefix>quay.io</docker.image.prefix>
+		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
