--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,9 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-        <quarkus.version>3.1.0.Final</quarkus.version>
+        <quarkus.version>2.5.1.Final</quarkus.version>
+        <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
         <docker.image.prefix>quay.io</docker.image.prefix>
-        <sonar-maven-plugin.version>3.9.1</sonar-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -41,11 +40,6 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>${sonar-maven-plugin.version}</version>
-            </plugin>
-            <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>${quarkus.version}</version>
@@ -68,9 +62,17 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire-plugin.version}</version>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>${sonarqube.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
