--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
 
 build:
   stage: build
+  image: maven:latest
   script:
     - mvn $MAVEN_CLI_OPTS clean package -DskipTests
   artifacts:
@@ -18,6 +19,7 @@ build:
 
 test:
   stage: test
+  image: maven:latest
   script:
     - mvn $MAVEN_CLI_OPTS test sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.password=$SONAR_PASSWORD
 
