--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <quarkus.version>2.3.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
-        <docker.image.prefix>quay.io</docker.image.prefix>
+        <docker.image.prefix>$NEXUS_URL:/repository/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
 
     <dependencyManagement>
