--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-resteasy</artifactId>
+			<artifactId>quarkus-container-image-docker</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
