--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>quarkus-helloworld</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -15,7 +15,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <quarkus.version>2.3.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
-        <docker.image.prefix>172.30.38.4:8081/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
+        <docker.image.prefix>docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
 
     <dependencyManagement>
@@ -73,29 +73,29 @@
                     </execution>
                 </executions>
             </plugin>
-			<plugin>
-				<groupId>io.quarkus</groupId>
-				<artifactId>quarkus-container-image-docker</artifactId>
-				<version>${quarkus.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>build</goal>
-							<goal>push</goal>
-						</goals>
-						<configuration>
-							<additional-tags>
-								<tag>${project.version}</tag>
-							</additional-tags>
-							<push>
-								<enabled>true</enabled>
-								<registry>${docker.image.prefix}</registry>
-							<push>
-						<configuration>	
-					<execution>
-				<executions>
-			<plugin>
+            <!-- Add the following Docker-related plugin -->
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-docker</artifactId>
+                <version>${quarkus.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                        <configuration>
+                            <additional-tags>
+                                <tag>${project.version}</tag>
+                            </additional-tags>
+                            <push>
+                                <enabled>true</enabled>
+                                <registry>${docker.image.prefix}</registry>
+                            </push>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
-
 </project>
