--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ build:
   stage: build
   image: maven:latest
   script:
+    - mvn $MAVEN_CLI_OPTS clean install
     - mvn $MAVEN_CLI_OPTS clean package -DskipTests
   artifacts:
     paths:
