--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <dependencies>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-docker</artifactId>
                 <artifactId>quarkus-bom</artifactId>
                 <version>${quarkus.version}</version>
                 <type>pom</type>
