--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <quarkus.version>3.1.0</quarkus.version>
+        <quarkus.version>1.11.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
         <docker.image.prefix>docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
