--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
 
     <groupId>com.example</groupId>
     <artifactId>quarkus-helloworld</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <quarkus.version>1.11.0.Final</quarkus.version>
+        <quarkus.version>1.9.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
-        <docker.image.prefix>docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
+        <docker.image.prefix>172.30.38.4:8081/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
 
     <dependencyManagement>
@@ -34,11 +34,6 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-docker</artifactId>
-            <version>1.8.0.Final</version>
         </dependency>
     </dependencies>
 
@@ -81,13 +76,13 @@
             <!-- Add the following Docker-related plugin -->
             <plugin>
                 <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-container-image-docker</artifactId>
+                <artifactId>quarkus-maven-plugin</artifactId>
                 <version>${quarkus.version}</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>build</goal>
-                            <goal>push</goal>
+                            <goal>containerize</goal>
                         </goals>
                         <configuration>
                             <additional-tags>
