--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <quarkus.version>1.9.0.Final</quarkus.version>
+        <quarkus.version>2.4.0.Final</quarkus.version>
         <sonarqube.plugin.version>3.9.0</sonarqube.plugin.version>
         <docker.image.prefix>172.30.38.4:8081/docker-private/demo-project/quarkus-helloworld:${project.version}</docker.image.prefix>
     </properties>
@@ -82,7 +82,6 @@
                     <execution>
                         <goals>
                             <goal>build</goal>
-                            <goal>containerize</goal>
                         </goals>
                         <configuration>
                             <additional-tags>
@@ -95,6 +94,13 @@
                         </configuration>
                     </execution>
                 </executions>
+                    <configuration>
+                        <container-image>
+                            <build>
+                                <enabled>true</enabled>
+                            </build>
+                        </container-image>
+                    </configuration>
             </plugin>
         </plugins>
     </build>
