--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@ stages:
 variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
-  DOCKER_REGISTRY: "$NEXUS_URL/repository/docker-private/demo-project"
 
 build:
   stage: build
@@ -31,8 +30,7 @@ docker_push:
   stage: docker_push
   image: docker:stable
   script:
-#    - docker build -t 172.30.38.4:8081/quarkus-helloworld:${project.version} .
-    - docker push 172.30.38.4:8081/quarkus-helloworld:${project.version}
+    - docker push 172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld:${project.version}
   tags:
     - master
 
