--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ docker_push:
   stage: docker_push
   image: docker:stable
   script:
-    - docker push 172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld:${project.version}
+    - docker push 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:$CI_COMMIT_REF_NAME
   tags:
     - master
 
