--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ test:
 docker_push:
   stage: docker_push
   image: docker:stable
+  services:
+    - docker:dind
   script:
     - docker push 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:$CI_COMMIT_REF_NAME
   tags:
