--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 stages:
   - build
   - test
+  - docker
   - docker_push
 
 variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
+  DOCKER_IMAGE_PREFIX: "172.30.38.4:8081/docker-private/demo-project/quarkus-helloworld:${CI_COMMIT_REF_NAME}"
 
 build:
   stage: build
@@ -27,15 +29,26 @@ test:
   tags:
     - master
 
+docker:
+  stage: docker
+  image: maven:latest
+  before_script:
+    - echo "Preparing to create Docker image..."
+  script:
+    - mvn $MAVEN_CLI_OPTS compile quarkus:build -Dquarkus.container-image.build=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
+    - mvn $MAVEN_CLI_OPTS quarkus:build -Dquarkus.container-image.push=true -Dquarkus.container-image.image=$DOCKER_IMAGE_PREFIX
+  tags:
+    - master
+
 docker_push:
   stage: docker_push
   image: docker:stable
   services:
     - docker:dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
+  before_script:
+    - echo "Preparing to push Docker image..."
   script:
-    - docker push 172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld:$CI_COMMIT_REF_NAME
+    - docker push $DOCKER_IMAGE_PREFIX
   tags:
     - master
 
