--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 variables:
   MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version"
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
-  DOCKER_IMAGE_PREFIX: "172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld:${CI_COMMIT_REF_NAME}"
+  DOCKER_IMAGE_PREFIX: "172.30.38.4:8081/repository/docker-private/demo-project/quarkus-helloworld"
 
 build:
   stage: build
