--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,7 @@
 stages:
-#  - test
+  - build
+  - test
+  - docker
   - docker_push
 
 variables:
@@ -7,43 +9,61 @@ variables:
   MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
   DOCKER_IMAGE_PREFIX: "repository/docker-private/demo-project/quarkus-helloworld"
   CI_REGISTRY_IMAGE: "172.30.38.4:8083/repository/docker-private/demo-project/quarkus-helloworld"
+build:
+  stage: build
+  image: maven:3.8.4-openjdk-11-slim
+  script:
+    - mvn $MAVEN_CLI_OPTS clean package -DskipTests
+    - mvn package -Dquarkus.container-image.build=true
+  artifacts:
+    paths:
+      - target/*.jar
+  tags:
+    - master
 
-# test:
-#   stage: test
-#   image: maven:3.8.4-openjdk-11-slim
-#   script:
-#     - mvn $MAVEN_CLI_OPTS test sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.password=$SONAR_PASSWORD
-#   tags:
-#    - master
-#   rules:
-#     - exists:
-#         - target/sonar/report-task.txt
+test:
+  stage: test
+  image: maven:3.8.4-openjdk-11-slim
+  script:
+    - mvn $MAVEN_CLI_OPTS test sonar:sonar -Dsonar.host.url=$SONAR_URL -Dsonar.login=$SONAR_LOGIN -Dsonar.password=$SONAR_PASSWORD
+  tags:
+   - master
 
-
-
+docker:
+  stage: docker
+  image: maven:3.8.4-openjdk-11-slim
+  before_script:
+    - echo "Preparing to create Docker image..."
+  script:
+    - mvn clean package
+  artifacts:
+    paths:
+      - target/*.jar
+      - /var/run/docker.sock
+  tags:
+    - master
+    
 docker_push:
   stage: docker_push
   image:
-    name: pratik1945/openjdk11-docker:2.0.0testing
-    entrypoint: [""]
+    name: docker:19.03.14
   variables:
     DOCKER_HOST: tcp://dind.gitlab-runner:2375
-    DOCKER_TLS_CERTDIR: ""
   services:
   - name: docker:19.03.14-dind
-    command: ["--insecure-registry", "registry.gitlab.com"]
+    entrypoint: ["env", "-u", "DOCKER_HOST"]
+    command: ["dockerd-entrypoint.sh"]
   before_script:
     - mkdir -p $HOME/.docker
     - echo $DOCKER_AUTH_CONFIG > $HOME/.docker/config.json
     - echo "Preparing to push Docker image..."
   script:
-    - mvn clean package
-    # - mvn package -Dquarkus.container-image.build=true
+    - docker load -i target/docker_image.tar
     - docker images
     - docker tag $DOCKER_IMAGE_PREFIX $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}
     - docker push $CI_REGISTRY_IMAGE:${CI_COMMIT_REF_SLUG}-${CI_COMMIT_SHORT_SHA}
-  artifacts:
-    paths:
-      - target/*.jar
+  rules:
+    - exists:
+        - target/docker_image.tar
   tags:
     - master
